2006-07-13  Denis PILAT  <denis.pilat@st.com>

	* interps.c (interpreter_completer): Allocate one more item to the
	'matches' list and set them all to 0 with a xcalloc.

2006-06-20  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 6.5.0.<date>-cvs now that release
	has been made.

2006-06-20  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 6.5 for the release.

2006-06-20  Joel Brobecker  <brobecker@adacore.com>

	* PROBLEMS: Document threads/2137.

2006-06-15  Daniel Jacobowitz  <dan@codesourcery.com>

	* infrun.c (insert_step_resume_breakpoint_at_caller): New function,
	based on insert_step_resume_breakpoint_at_frame.
	(handle_inferior_event): Update comments.  Use
	insert_step_resume_breakpoint_at_caller.
	(insert_step_resume_breakpoint_at_frame): Revise comments.

2006-06-10  Daniel Jacobowitz  <dan@codesourcery.com>

	* mingw-hdep.c (gdb_select): Always check for NULL fd sets
	before calling FD_ISSET.  Correct check for exceptfds which
	previously tested writefds.

2006-06-02  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Increase version number to 6.4.91 after the first
	pre-release has been created.

2006-06-02  Joel Brobecker  <brobecker@adacore.com>

	* configure.ac: -Werror is no longer enabled by default.
	* configure: Regenerate.

2006-05-27  Joel Brobecker  <brobecker@adacore.com>

	From Peter Schauer <peterschauer@gmx.net>
	* m2-typeprint.c (m2_record_fields): Move variable declarations
	to the begining of the block.

2006-05-20  Gaius Mulley  <gaius@glam.ac.uk>

	* NEWS: (Improved Modula-2 language support): New section.

2006-05-19  Joel Brobecker  <brobecker@adacore.com>

	* configure: Regenerate using proper version of autoconf.

2006-05-16  Joel Brobecker  <brobecker@adacore.com>

	* README: Update date of last modification.

2006-05-16  Joel Brobecker  <brobecker@adacore.com>

	* README: Update GDB version number.

2006-05-16  Joel Brobecker  <brobecker@adacore.com>
